--- a/styles/css/vtex.store.css
+++ b/styles/css/vtex.store.css
@@ -1,6 +1,6 @@
 :local(:root) {
   --black-dark: #000000;
-  --fresh-blue: #007f7f;
+  --fresh-blue: #f71963;
   --fresh-blue-dark: #0067c7;
   --fresh-blue-lightest: #f3f9ff;
   --fresh-orange: #ff5f00;
