--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -7,7 +7,7 @@
 }
 
 .closeIconContainer::before {
-  content: "Carrinho";
+  content: "Cart";
   font-size: 24px;
   line-height: 32px;
   font-family: Roboto;
