--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -351,7 +351,7 @@
 .productImagesContainer--desktop::after {
   display: block;
   color: var(--black-medium);
-  content: "Passe o cursor na imagem para aproximar";
+  content: "Hover over the image to zoom in";
   padding-top: 20px;
   padding-left: 116px;
   font-size: 12px;
